KTS-3741 "The Property Preview Panel lacks a scroll bar" Fixed. Changed overflow css from hidden to auto.
Committed by: Megan Watson
Reviewed by: Conrad Vermeulen



git-svn-id: https://kt-dms.svn.sourceforge.net/svnroot/kt-dms/trunk@9397 c91229c3-7414-0410-bfa2-8a42b809f60b

--- a/plugins/ktstandard/documentpreview/resources/container.css
+++ b/plugins/ktstandard/documentpreview/resources/container.css
@@ -28,7 +28,7 @@
     padding-bottom: 0px;
     cursor: pointer;
     height: 250px;
-    overflow: hidden;
+    overflow: auto;
     clear: both;
 }
 
